# ColorView

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Command.h  Image.cpp  Image.h  Img.qrc  InitBlackWhiteImg.cpp  InitBlackWhiteImg.h  InitColorImg.cpp  InitColorImg.h  InitializeImg.cpp  InitializeImg.h  README.md  ShowImage.cpp  ShowImage.h  command.cpp  main.cpp  widget.cpp  widget.h  widget.ui
Image/: Img.qrc  Takezo.qss
Sources/: Allocation.cpp  Allocation.h  AveragingColor.cpp  AveragingColor.h  Billboard.cpp  Billboard.h  BlackWhite.txt  Board.cpp  Board.h  CaluclateColor.h  Command.h  Content.cpp  Content.h  ContentItemEdit.cpp  ContentItemEdit.h  ContentItemFile.cpp  ContentItemFile.h  ContentItemImage.cpp  ContentItemImage.h  ContentItemPage.cpp  ContentItemPage.h  ConversionColor.h  Cool.txt  Data.qrc  FilterBalckWhite.cpp  FilterBalckWhite.h  FilterForest.cpp  FilterForest.h  FilterImage.cpp  FilterImage.h  FilterSaturation.cpp  FilterSaturation.h  FilterSharpness.cpp  FilterSharpness.h  FilterWarm.cpp  FilterWarm.h  FkGlobal.h  Forest.txt  GraphicsBillboardScene.cpp  GraphicsBillboardScene.h  (+41 more)
TestingColorView/: test_main.cpp
TestingColorView/TestingSources/: test_itemfile.cpp
TestingColorView/TestingWindows/: test_mainwindow.cpp
Windows/: MainWindow.cpp  MainWindow.h  WgtFilter.cpp  WgtFilter.h  WgtFilter.ui  WgtFraming.cpp  WgtFraming.h  WgtFraming.ui  WgtImgProperty.cpp  WgtImgProperty.h  WgtImgProperty.ui  WgtSaveImg.cpp  WgtSaveImg.h  WgtSaveImg.ui  WgtSelectWidthPencil.cpp  WgtSelectWidthPencil.h
